<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_user_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCreateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/emailCreateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email_label"
        app:layout_constraintStart_toStartOf="@+id/nameCreateLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameCreateLabel" />

    <EditText
        android:id="@+id/nameCreateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/nameCreateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameCreateLabel" />

    <EditText
        android:id="@+id/emailCreateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/emailCreateLabel"
        app:layout_constraintStart_toStartOf="@+id/nameCreateInput"
        app:layout_constraintTop_toTopOf="@+id/emailCreateLabel" />

    <TextView
        android:id="@+id/roleCreateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/role_label"
        app:layout_constraintStart_toStartOf="@+id/emailCreateLabel"
        app:layout_constraintTop_toBottomOf="@+id/emailCreateLabel" />

    <RadioGroup
        android:id="@+id/roleCreateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/emailCreateInput"
        app:layout_constraintTop_toBottomOf="@+id/roleCreateLabel">

        <RadioButton
            android:id="@+id/studentRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_radio_text"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="209dp" />

        <RadioButton
            android:id="@+id/employeeRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_radio_text" />

        <RadioButton
            android:id="@+id/otherRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_radio_text" />

    </RadioGroup>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>